test(Session): update session testes.